cabal-version:       3.0
-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                units
version:             1.0.0
author:              Stefan Klinger
maintainer:          git@stefan-klinger.de

category: experimantal
synopsis: Demonstration of roubust-int and shuntingYard packages

license: GPL-3.0-or-later

extra-source-files:  README.md


common shared-properties
  default-language:    Haskell2010
  default-extensions:  BangPatterns
  ghc-options:         -Wall
                       -Werror
                       -Wwarn=missing-local-signatures
                       -Wwarn=missing-export-lists
                       -Wwarn=unused-top-binds
                       -Wwarn=deprecations
                       -Werror=unused-imports
                       -Wno-orphans
                       -Wwarn=name-shadowing


executable units
  import:              shared-properties

  hs-source-dirs:      src
  main-is:             Main.hs

  other-modules:       AST, Parser

  build-depends:       base
                     , parsec
                     , shuntingYard
                     , robust-int
                     , containers
                     , parsec-numbers
